@@ -239,7 +239,7 @@
 			<RegExp conditional="tmdbfanart" input="$$11" output="&lt;chain function=&quot;GetTMDBFanartByIdChain&quot;&gt;$$11&lt;/chain&gt;" dest="5+">
 				<expression />
 			</RegExp>
-			<RegExp conditional="tmdbset" input="$$11" output="&lt;chain function=&quot;GetTMDBSetByIdChain&quot;&gt;$$11&lt;/chain&gt;" dest="5+">
+			<RegExp conditional="tmdbset" input="$$11" output="&lt;chain function=&quot;GetTMDBLangSetByIdChain&quot;&gt;$$11&lt;/chain&gt;" dest="5+">
 				<expression />
 			</RegExp>
 			<!--Call GetMoviePosterDBLink-->
