@@ -15,4 +15,5 @@
     <string id="30011">Artwork</string>
     <string id="30012">Trailers</string>
     <string id="30013">Enable trailers from themoviedb.org</string>
+    <string id="30014">Preferred Set Title Language</string>
 </strings>
