@@ -15,4 +15,5 @@
     <string id="30011">Borítók</string>
     <string id="30012">Filmelőzetesek</string>
     <string id="30013">Filmelőzetes letöltése a themoviedb.org-ról</string>
+    <string id="30014">BOXSET elnevezés nyelve (preferált)</string>
 </strings>
