@@ -1,3 +1,6 @@
+[B]1.9.0[/B]
+- added: Language preference for Sets
+
 [B]1.8.0[/B]
 - added: Trailers from TMDb
 - added: Language preference for Posters
